# CSE230_TrelloTUI

./: .gitignore  LICENSE  README.md  file.json  file.txt  run.sh  trello-tui.cabal
src/: Actions.hs  Form.hs  Main.hs  Tasks.hs  Types.hs  Widgets.hs
test/: Main.hs
