name:                trello-tui
version:             0.1.0.0
synopsis:            TUI for Trello
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    Types,
                      Actions,
                      Widgets,
                      Form
  Default-Extensions: OverloadedStrings,
                      DeriveGeneric,
                      TemplateHaskell
  build-depends:      base,
                      brick,
                      text,
                      aeson,
                      optparse-applicative,
                      bytestring,
                      directory,
                      vty,
                      microlens,
                      microlens-th,
                      microlens-mtl
  hs-source-dirs:     src
  default-language:   Haskell2010

executable trello-tui
  hs-source-dirs:     src
  ghc-options:        -threaded
  build-depends:      base,
                      brick,
                      text,
                      aeson,
                      optparse-applicative,
                      bytestring,
                      directory,
                      vty,
                      microlens,
                      microlens-th,
                      microlens-mtl,
                      trello-tui
  default-language:   Haskell2010
  main-is:            Main.hs
  Default-Extensions: OverloadedStrings,
                      DeriveGeneric,
                      TemplateHaskell

-- executable trello-form
--   hs-source-dirs:     src
--   ghc-options:        -threaded -Wall -Wcompat -O2
--   build-depends:      base,
--                       brick,
--                       text,
--                       aeson,
--                       microlens,
--                       microlens-th,
--                       vty
--   default-language:   Haskell2010
--   main-is:            Form.hs
--   Default-Extensions: OverloadedStrings,
--                       DeriveGeneric
--                       TemplateHaskell